# project-enterpreneurship

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
api/: Dockerfile  package.json
api/src/: auth.ts  config.ts  index.ts  queue.ts
auth-service/: .env.example  Dockerfile  requirements.txt
auth-service/app/: dependencies.py  main.py
email-adapter-service/: .env.example  Dockerfile  requirements.txt
email-adapter-service/app/: dependencies.py  main.py
frontend-dashboard/: .env.example  Dockerfile  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend-dashboard/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend-dashboard/app/: globals.css  layout.tsx
frontend-dashboard/lib/: api.ts  auth.ts
frontend-dashboard/types/: index.ts
infra/postgres/: 001_init.sql
mcp/: Dockerfile  package.json  tsconfig.json
mcp-gateway-service/: .env.example  Dockerfile  requirements.txt
mcp-gateway-service/app/: dependencies.py  main.py
mcp/src/: config.ts  index.ts  tools.ts
shared/: package.json  pyproject.toml  tsconfig.json
shared/shared/: __init__.py  constants.py  jsonrpc.py  models.py  security.py
shared/src/: crypto.ts  db.ts  index.ts  queue.ts  types.ts
slack-adapter-service/: Dockerfile
whatsapp-adapter-service/: Dockerfile
worker/: Dockerfile  package.json
(+142 files in other folders)
