[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-platform-inbox-shared"
version = "1.0.0"
description = "Shared models and security helpers for Multi-Platform Inbox services."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.2",
  "cryptography>=43.0.1",
  "email-validator>=2.2.0",
]

[tool.setuptools]
packages = ["shared"]
